--- a/sample-webapp/src/main/resources/templates/index.html
+++ b/sample-webapp/src/main/resources/templates/index.html
@@ -10,27 +10,67 @@
 	<link rel="stylesheet" th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}" />
 	<link rel="stylesheet" th:href="@{/css/main.css}" />
 
+	<style>
+		#customers {
+			font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+			border-collapse: collapse;
+			width: 100%;
+		}
+
+		#customers td,
+		#customers th {
+			border: 1px solid #ddd;
+			padding: 8px;
+		}
+
+		#customers tr:nth-child(even) {
+			background-color: #f2f2f2;
+		}
+
+		#customers tr:hover {
+			background-color: #ddd;
+		}
+
+		#customers th {
+			padding-top: 12px;
+			padding-bottom: 12px;
+			text-align: left;
+			background-color: #4CAF50;
+			color: white;
+		}
+	</style>
+
 </head>
 
 <body>
-	<h1>HEADERS</h1>
-	<table class="table table-sm">
-		<th:block th:each="item: ${headers}">
-			<tr th:each="fuse: ${item.value}">
-				<td th:text="${item.key}" />
-				<td th:text="${item.value}" />
+	<div class="container-fluid">
+		<h1>HEADERS</h1>
+		<table id="customers">
+			<tr>
+				<th>HEADER NAME</th>
+				<th>HEADER VALUE</th>
 			</tr>
-		</th:block>
-	</table>
-	<h1>PARAMETERS</h1>
-	<table class="table table-sm">
-		<th:block th:each="item: ${params}">
-			<tr th:each="fuse: ${item.value}">
-				<td th:text="${item.key}" />
-				<td th:text="${item.value}" />
+			<th:block th:each="item: ${headers}">
+				<tr th:each="fuse: ${item.value}">
+					<td th:text="${item.key}" />
+					<td th:text="${item.value}" />
+				</tr>
+			</th:block>
+		</table>
+		<h1>PARAMETERS</h1>
+		<table id="customers">
+			<tr>
+				<th>PARAMETER NAME</th>
+				<th>PARAMETER VALUE</th>
 			</tr>
-		</th:block>
-	</table>
+			<th:block th:each="item: ${params}">
+				<tr th:each="fuse: ${item.value}">
+					<td th:text="${item.key}" />
+					<td th:text="${item.value}" />
+				</tr>
+			</th:block>
+		</table>
+	</div>
 	<script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
 </body>
 
